// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders a default checkbox button group 1`] = `
<fieldset
  className="slds-form-element"
>
  <legend
    className="slds-form-element__legend slds-form-element__label"
  >
    Scheduled Day(s)
  </legend>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-checkbox_button-group"
    >
      <span
        className="slds-button slds-checkbox_button"
      >
        <input
          id="unique-id-monday-1"
          name="checkbox"
          type="checkbox"
          value="unique-id-monday-1"
        />
        <label
          className="slds-checkbox_button__label"
          htmlFor="unique-id-monday-1"
        >
          <span
            className="slds-checkbox_faux"
          >
            Mon
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox_button"
      >
        <input
          id="unique-id-tuesday-1"
          name="checkbox"
          type="checkbox"
          value="unique-id-tuesday-1"
        />
        <label
          className="slds-checkbox_button__label"
          htmlFor="unique-id-tuesday-1"
        >
          <span
            className="slds-checkbox_faux"
          >
            Tue
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox_button"
      >
        <input
          id="unique-id-wednesday-1"
          name="checkbox"
          type="checkbox"
          value="unique-id-wednesday-1"
        />
        <label
          className="slds-checkbox_button__label"
          htmlFor="unique-id-wednesday-1"
        >
          <span
            className="slds-checkbox_faux"
          >
            Wed
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox_button"
      >
        <input
          id="unique-id-thursday-1"
          name="checkbox"
          type="checkbox"
          value="unique-id-thursday-1"
        />
        <label
          className="slds-checkbox_button__label"
          htmlFor="unique-id-thursday-1"
        >
          <span
            className="slds-checkbox_faux"
          >
            Thu
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox_button"
      >
        <input
          id="unique-id-friday-1"
          name="checkbox"
          type="checkbox"
          value="unique-id-friday-1"
        />
        <label
          className="slds-checkbox_button__label"
          htmlFor="unique-id-friday-1"
        >
          <span
            className="slds-checkbox_faux"
          >
            Fri
          </span>
        </label>
      </span>
    </div>
  </div>
</fieldset>
`;

exports[`renders a default checkbox button group with error 1`] = `
<fieldset
  className="slds-form-element slds-has-error"
>
  <legend
    className="slds-form-element__legend slds-form-element__label"
  >
    Scheduled Day(s)
  </legend>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-checkbox_button-group"
    >
      <span
        className="slds-button slds-checkbox_button"
      >
        <input
          aria-describedby="error_01"
          id="unique-id-monday-2"
          name="checkbox"
          type="checkbox"
          value="unique-id-monday-2"
        />
        <label
          className="slds-checkbox_button__label"
          htmlFor="unique-id-monday-2"
        >
          <span
            className="slds-checkbox_faux"
          >
            Mon
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox_button"
      >
        <input
          aria-describedby="error_01"
          id="unique-id-tuesday-2"
          name="checkbox"
          type="checkbox"
          value="unique-id-tuesday-2"
        />
        <label
          className="slds-checkbox_button__label"
          htmlFor="unique-id-tuesday-2"
        >
          <span
            className="slds-checkbox_faux"
          >
            Tue
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox_button"
      >
        <input
          aria-describedby="error_01"
          id="unique-id-wednesday-2"
          name="checkbox"
          type="checkbox"
          value="unique-id-wednesday-2"
        />
        <label
          className="slds-checkbox_button__label"
          htmlFor="unique-id-wednesday-2"
        >
          <span
            className="slds-checkbox_faux"
          >
            Wed
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox_button"
      >
        <input
          aria-describedby="error_01"
          id="unique-id-thursday-2"
          name="checkbox"
          type="checkbox"
          value="unique-id-thursday-2"
        />
        <label
          className="slds-checkbox_button__label"
          htmlFor="unique-id-thursday-2"
        >
          <span
            className="slds-checkbox_faux"
          >
            Thu
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox_button"
      >
        <input
          aria-describedby="error_01"
          id="unique-id-friday-2"
          name="checkbox"
          type="checkbox"
          value="unique-id-friday-2"
        />
        <label
          className="slds-checkbox_button__label"
          htmlFor="unique-id-friday-2"
        >
          <span
            className="slds-checkbox_faux"
          >
            Fri
          </span>
        </label>
      </span>
    </div>
    <div
      className="slds-form-element__help"
      id="error_01"
    >
      This field is required
    </div>
  </div>
</fieldset>
`;

exports[`renders a disabled checkbox button group 1`] = `
<fieldset
  className="slds-form-element"
>
  <legend
    className="slds-form-element__legend slds-form-element__label"
  >
    Scheduled Day(s)
  </legend>
  <div
    className="slds-form-element__control"
  >
    <div
      className="slds-checkbox_button-group"
    >
      <span
        className="slds-button slds-checkbox_button"
      >
        <input
          disabled="true"
          id="unique-id-monday-3"
          name="checkbox"
          type="checkbox"
          value="unique-id-monday-3"
        />
        <label
          className="slds-checkbox_button__label"
          htmlFor="unique-id-monday-3"
        >
          <span
            className="slds-checkbox_faux"
          >
            Mon
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox_button"
      >
        <input
          disabled="true"
          id="unique-id-tuesday-3"
          name="checkbox"
          type="checkbox"
          value="unique-id-tuesday-3"
        />
        <label
          className="slds-checkbox_button__label"
          htmlFor="unique-id-tuesday-3"
        >
          <span
            className="slds-checkbox_faux"
          >
            Tue
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox_button"
      >
        <input
          disabled="true"
          id="unique-id-wednesday-3"
          name="checkbox"
          type="checkbox"
          value="unique-id-wednesday-3"
        />
        <label
          className="slds-checkbox_button__label"
          htmlFor="unique-id-wednesday-3"
        >
          <span
            className="slds-checkbox_faux"
          >
            Wed
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox_button"
      >
        <input
          disabled="true"
          id="unique-id-thursday-3"
          name="checkbox"
          type="checkbox"
          value="unique-id-thursday-3"
        />
        <label
          className="slds-checkbox_button__label"
          htmlFor="unique-id-thursday-3"
        >
          <span
            className="slds-checkbox_faux"
          >
            Thu
          </span>
        </label>
      </span>
      <span
        className="slds-button slds-checkbox_button"
      >
        <input
          disabled="true"
          id="unique-id-friday-3"
          name="checkbox"
          type="checkbox"
          value="unique-id-friday-3"
        />
        <label
          className="slds-checkbox_button__label"
          htmlFor="unique-id-friday-3"
        >
          <span
            className="slds-checkbox_faux"
          >
            Fri
          </span>
        </label>
      </span>
    </div>
  </div>
</fieldset>
`;
